Finalizada aula 30 EspecializaTI - NotebookHome

--- a/.comandos.md
+++ b/.comandos.md
@@ -132,3 +132,7 @@ php artisan make:request StoreUpdateUserFormRequest -> para fazer validações
 ```
 
 
+Criar um link para armazenar arquivos
+```sh
+php artisan storage:link
+```
